WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300428
[iOS 26] Camera capture orientation is not correct on SafariViewService
https://bugs.webkit.org/show_bug.cgi?id=300428
Summary
[iOS 26] Camera capture orientation is not correct on SafariViewService
youenn fablet
Reported
2025-10-08 23:57:15 PDT
[iOS 26] Camera capture orientation is not correct on SafariViewService
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2025-10-08 23:57:26 PDT
<
rdar://160105158
>
youenn fablet
Comment 2
2025-10-09 00:04:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52051
EWS
Comment 3
2025-10-09 08:51:42 PDT
Committed
301262@main
(3c51043d4a39): <
https://commits.webkit.org/301262@main
> Reviewed commits have been landed. Closing PR #52051 and removing active labels.
Will Budd
Comment 4
2025-10-14 17:07:29 PDT
@youennfablet This bug looks very similar to the one I reported at
https://bugs.webkit.org/show_bug.cgi?id=299591
Do you know if Safari's "Add to Home Screen" feature uses SafariViewService internally? Because if that's the case, I imagine your fix for this issue has effectively resolved that issue too? If so, thank you very much!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug