[iOS 26] Camera capture orientation is not correct on SafariViewService rdar://160105158 https://bugs.webkit.org/show_bug.cgi?id=300428

Reviewed by Wenson Hsieh.

On iOS 26, UIApplication.sharedApplication.statusBarOrientation seems to always return the portrait orientation on SVC.
windowScene.effectiveGeometry.interfaceOrientation on the other end provides the correct value.
We switch the order to use windowScene.effectiveGeometry.interfaceOrientation if there is a scene and UIApplication.sharedApplication.statusBarOrientation otherwise.
We also remove one UIKit SPI as part of this change.

Manually tested on Mobile Safari, SVC and WKWebView.

Canonical link: https://commits.webkit.org/301262@main